--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 <body>
 
 <div class="header">
-	
+	Frederick Qiu
 </div>
 
 <div class="content">
 	
 	<div class="padding">
-	
+		Padding
 	</div>
 	
 	<div class="description">
-	
+		Description
 	</div>
 	
 	<div class="external_links">
-	
+		External Links
 	</div>
 	
 </div>
