--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 
 <body>
 
+<div class="header">
+	.
 </div>
 
 <div class="content">
 	
 	<div class="description">
-		
+		.
 	</div>
 	
 	<div class="external_links">
-		
+		.
 	</div>
-	
-</div>
 	
 </div>
 
