Styling and adding links

--- a/index.html
+++ b/index.html
@@ -3,26 +3,51 @@
 <head>
 <title>Frederick Qiu | Portfolio</title>
 <link rel="stylesheet" type="text/css" href="css/main.css">
+<script src="js/link.js"></script>
 </head>
 
 <body>
 
 <div class="header">
-	.
+	<div class="header_third"><h1>Frederick Qiu</h1></div><div class="header_third"><h1>Portfolio</h1></div><div class="header_third"></div>
 </div>
 
 <div class="content">
 	
-	<div class="description">
-		.
+	<div class="external_links">
+		
+		<div class="button" onclick="openInNewTab('QiuFrederick.pdf')">
+			<h2>Resume</h2>
+			<h3>A brief summary of my more significant skills and accomplishments.</h3>
+		</div>
+		
+		<div class="button" onclick="openInNewTab('https://github.com/TeamMonumenta/monumenta-plugins-public')">
+			<h2>Project - Monumenta Plugins</h2>
+			<h3>A GitHub repository for Java plugins for a Minecraft server I am a lead developer for, contributing 20,000+ lines of code over the past 2 years.</h3>
+		</div>
+		
+		<div class="button" onclick="openInNewTab('https://nmrqualytics.com')">
+			<h2>Project - NMR Qualytics Website</h2>
+			<h3>A website I designed for Qualytics LLC, equipped with a secure login system and database where clients can submit requests for NMR lab tests.</h3>
+		</div>
+		
+		<div class="button" onclick="openInNewTab('NMRAnalysisTetrahedronLetters.pdf')">
+			<h2>Publication - NMR Analysis, Tetrahedron Letters</h2>
+			<h3>A paper I am credited as third author in. I conducted NMR structural analysis on samples of the chemical compound that is the subject of the paper.</h3>
+		</div>
+		
+		<div class="button" onclick="openInNewTab('StatisticalAnalysisMDPI.pdf')">
+			<h2>Publication - Statistical Analysis, MDPI</h2>
+			<h3>Independent research I conducted under a professor at Villanova. I am credited as first author.</h3>
+		</div>
+		
 	</div>
 	
-	<div class="external_links">
-		.
+	<div class="description">
+		<p>I am a cool kid</p>
 	</div>
 	
 </div>
-
 
 </body>
 
