--- a/index.html
+++ b/index.html
@@ -21,14 +21,24 @@
 			<h3>A brief summary of my more significant skills and accomplishments.</h3>
 		</div>
 		
+		<div class="button" onclick="openInNewTab('Transcript.pdf')">
+			<h2>Transcript</h2>
+			<h3>A complete overview of my coursework at Princeton University.</h3>
+		</div>
+		
 		<div class="button" onclick="openInNewTab('https://github.com/TeamMonumenta/monumenta-plugins-public')">
 			<h2>Project - Monumenta Plugins</h2>
 			<h3>A GitHub repository for Java plugins for a Minecraft server I am a lead developer for, contributing 20,000+ lines of code over the past 2 years.</h3>
 		</div>
 		
-		<div class="button" onclick="openInNewTab('https://nmrqualytics.com')">
+		<div class="button" onclick="openInNewTab('https://nmrqualytics.com/')">
 			<h2>Project - NMR Qualytics Website</h2>
 			<h3>A website I designed for Qualytics LLC, equipped with a secure login system and database where clients can submit requests for NMR lab tests.</h3>
+		</div>
+		
+		<div class="button" onclick="openInNewTab('https://www.youtube.com/channel/UCvDFylkxaFLe9jozpwW_kwg/')">
+			<h2>Project - Minecraft Noteblocks Music</h2>
+			<h3>A YouTube channel I started with a friend where we create electronic music covers in a constrained medium.</h3>
 		</div>
 		
 		<div class="button" onclick="openInNewTab('NMRAnalysisTetrahedronLetters.pdf')">
@@ -36,15 +46,32 @@
 			<h3>A paper I am credited as third author in. I conducted NMR structural analysis on samples of the chemical compound that is the subject of the paper.</h3>
 		</div>
 		
-		<div class="button" onclick="openInNewTab('StatisticalAnalysisMDPI.pdf')">
-			<h2>Publication - Statistical Analysis, MDPI</h2>
+		<div class="button" onclick="openInNewTab('StatisticalAnalysisMDPISustainability.pdf')">
+			<h2>Publication - Statistical Analysis, MDPI Sustainability</h2>
 			<h3>Independent research I conducted under a professor at Villanova. I am credited as first author.</h3>
 		</div>
 		
 	</div>
 	
 	<div class="description">
-		<p>I am a cool kid</p>
+		<div class="textbox">
+			<p>Hi, I'm Frederick Qiu. I'm currently a sophomore majoring in Computer Science at Princeton University, with plans to go to graduate school, then either continue in academia, or possibly pivot towards a job in software engineering. I haven't fully decided yet, so I'm looking to keep my options open and pursue opportunities in all areas.</p>
+		</div>
+		<div class="textbox">
+			<p>I've taken many computer science courses, and am currently taking two graduate courses, one on graph data structures and algorithms, and another on randomized algorithms and optimization algorithms. Next semester, I plan to take courses in machine learning and cryptography. In terms of my math background, I took a heavily proofs based linear algebra course last semester, and am currently taking a physics course in classical mechanics (though I've never taken multi-variable calculus or differential equations, both are heavily used in this course).</p>
+		</div>
+		<div class="textbox">
+			<p>As for programming, I have a lot of experience in Java, with moderate experience in C, Python, JavaScript, PHP, MySQL, HTML, CSS, and R. Aside from Java and C, I've picked up everything through judicious Googling and abusing StackOverflow, so I could probably learn and use any language in a pinch, though I heavily prefer languages with strict typing like Java.</p>
+		</div>
+		<div class="textbox">
+			<p>The activity I'm most involved with is tutoring, of all kinds - I'm a teaching assistant for some of the intro CS classes, holding office hours and help sessions for students with questions about the assignments. I also do tutoring in a variety of topics for high school students through Princeton Tutoring, and I volunteered as an SAT tutor for underprivileged students last year.</p>
+		</div>
+		<div class="textbox">
+			<p>Aside from that, I'm very involved in a volunteer project developing a Minecraft server called Monumenta. I'm the balance lead over there (which is basically doing a lot of math to make sure there's a well-defined difficulty curve), and I'm heavily involved with developing the plugins that we use to customize the game. The project has been a great chance to apply what I'm learning to a "real life" situation (if you can call a block game real life): my favorite example is when I used a trie to make parsing custom items extremely efficient. We have a few hundred active players, and the server maintenance costs are covered by donations.</p>
+		</div>
+		<div class="textbox">
+			<p>In my free time, I create covers of songs using "noteblocks" in Minecraft - it's a bit like a puzzle to try and make short pulses of sound from a limited selection of noises and pitches fit together - I recently started a YouTube channel with a friend showcasing these creations. Aside from that, I like to play video games and go on morning runs.</p>
+		</div>
 	</div>
 	
 </div>
