--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
 <title>Frederick Qiu | Portfolio</title>
+<link rel="icon" href="images/icon.png">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <script src="js/link.js"></script>
 </head>
