--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<h1>Frederick Qiu</h1>
 	</div>
 	<div class="header-right">
-		<h2>Prospective software engineer studying at Princeton University.</h2>
+		<h2>Prospective software engineer studying at Princeton University</h2>
 	</div>
 </div>
 
